// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Selector should be vertical and match snapshot 1`] = `
<Selector__Wrapper
  vertical={true}
>
  <Selector__Element
    $enabled={true}
    $selected={false}
    as={
      Object {
        "$$typeof": Symbol(react.memo),
        "WrappedComponent": [Function],
        "compare": null,
        "displayName": "Connect(Link)",
        "type": [Function],
      }
    }
    key="en"
    onClick={[Function]}
    to="/augsburg/en/"
  >
    <Selector__BoldSpacer>
      English
    </Selector__BoldSpacer>
    English
  </Selector__Element>
  <Selector__Element
    $enabled={true}
    $selected={true}
    as={
      Object {
        "$$typeof": Symbol(react.memo),
        "WrappedComponent": [Function],
        "compare": null,
        "displayName": "Connect(Link)",
        "type": [Function],
      }
    }
    key="de"
    onClick={[Function]}
    to="/augsburg/de/"
  >
    <Selector__BoldSpacer>
      Deutsch
    </Selector__BoldSpacer>
    Deutsch
  </Selector__Element>
  <Selector__Element
    $enabled={false}
    $selected={false}
    as={[Function]}
    flow="up"
    key="fr"
    text="random tooltip"
  >
    <Selector__BoldSpacer>
      Französisch
    </Selector__BoldSpacer>
    Französisch
  </Selector__Element>
</Selector__Wrapper>
`;

exports[`Selector should match snapshot 1`] = `
<Selector__Wrapper
  vertical={false}
>
  <Selector__Element
    $enabled={true}
    $selected={false}
    as={
      Object {
        "$$typeof": Symbol(react.memo),
        "WrappedComponent": [Function],
        "compare": null,
        "displayName": "Connect(Link)",
        "type": [Function],
      }
    }
    key="en"
    onClick={[Function]}
    to="/augsburg/en/"
  >
    <Selector__BoldSpacer>
      English
    </Selector__BoldSpacer>
    English
  </Selector__Element>
  <Selector__Element
    $enabled={true}
    $selected={true}
    as={
      Object {
        "$$typeof": Symbol(react.memo),
        "WrappedComponent": [Function],
        "compare": null,
        "displayName": "Connect(Link)",
        "type": [Function],
      }
    }
    key="de"
    onClick={[Function]}
    to="/augsburg/de/"
  >
    <Selector__BoldSpacer>
      Deutsch
    </Selector__BoldSpacer>
    Deutsch
  </Selector__Element>
  <Selector__Element
    $enabled={false}
    $selected={false}
    as={[Function]}
    flow="up"
    key="fr"
    text="random tooltip"
  >
    <Selector__BoldSpacer>
      Französisch
    </Selector__BoldSpacer>
    Französisch
  </Selector__Element>
</Selector__Wrapper>
`;
